@@ -16,6 +16,8 @@
 * BUG: Correctly maintain file history when redirecting using file
   persistency.
 * BUG: Topic names containing percent signs ("%") caused errors.  Fixed.
+* FEATURE: Allow additional symbols such as quotation marks in topic names.
+* FEATURE: Be more restrictive about characters allowed in user logins.
 * FEATURE: Validate system settings during upgrades.
 * FEATURE: Add instructions for performing a manual upgrade.
 * FEATURE: Clean up the layout of the Special:Admin page.
